HAWQ-1486. Catch error out on NULL condition for churl_init_download.